--- a/index.html
+++ b/index.html
@@ -35,9 +35,34 @@
           <svg class="w-6 h-6 text-primary" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M17 20h5v-2a4 4 0 00-3-3.87M9 20H4v-2a4 4 0 013-3.87m9-5V7a4 4 0 00-8 0v2m12 0a4 4 0 01-3 3.87M5 10a4 4 0 013-3.87"/></svg>
           O nas
         </h2>
-        <p class="text-lg text-gray-700 leading-relaxed">
-          Stowarzyszenie "Nasze Kliny Borkowskie" to organizacja działająca na rzecz lokalnej społeczności. Naszym celem jest wspieranie inicjatyw obywatelskich, ochrona praw mieszkańców oraz rozwój dzielnicy Kliny Borkowskie.
-        </p>
+        <div class="space-y-4 text-lg text-gray-700 leading-relaxed">
+          <p>Jedno wydarzenie sprawiło, że poczuliśmy jak ważna jest nasza „mała ojczyzna”.<br>
+          Jedno wydarzenie sprawiło, że stanęliśmy twarzą w twarz z historią i polityką, które bawią
+          się ludźmi.<br>
+          Stowarzyszenie Nasze Kliny Borkowskie powstało z inicjatywy grupy mieszkańców, aby</p>
+          <ul class="list-disc pl-6">
+            <li><span class="font-semibold">Chronić:</span>
+              <ul class="list-[circle] pl-6">
+                <li>ład urbanistyczny (zabudowa jednorodzinna) przed negatywnymi konsekwencjami realizacji inwestycji na terenie osiedla i w jego sąsiedztwie</li>
+                <li>prawa i interesy mieszkańców wobec instytucji publicznych, deweloperów i innych podmiotów</li>
+                <li>krajobraz Klinów Borkowskich, rozumiany jako postrzeganą przez ludzi przestrzeń, zawierającą elementy przyrodnicze lub wytwory cywilizacji, ukształtowaną w wyniku działania czynników naturalnych lub działalności człowieka</li>
+              </ul>
+            </li>
+            <li><span class="font-semibold">Uczestniczyć:</span>
+              <ul class="list-[circle] pl-6">
+                <li>w projektach mających na celu poprawę infrastruktury, bezpieczeństwa i estetyki osiedla</li>
+                <li>w monitorowaniu i zgłaszaniu problemów dotyczących infrastruktury, bezpieczeństwa oraz porządku publicznego</li>
+                <li>w komunikacji z władzami lokalnymi i służbami miejskimi w celu skutecznego rozwiazywania problemów związanych z bezpieczeństwem, infrastrukturą i inwestycjami</li>
+                <li>w konsultacjach społecznych dotyczących planowania przestrzennego, inwestycji oraz zmian infrastrukturalnych w okolicy</li>
+              </ul>
+            </li>
+            <li><span class="font-semibold">Wspierać:</span>
+              <ul class="list-[circle] pl-6">
+                <li>inicjatywy lokalne mieszkańców mające na celu rozwój społeczności i zwiększenia aktywności w podejmowaniu decyzji</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </section>
       <section id="kontakt">
         <h2 class="text-2xl font-bold text-primary mb-4 flex items-center gap-2">
