--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
     <header class="bg-primary text-white py-10 px-4 text-center shadow-lg relative">
       <div class="flex flex-col items-center justify-center">
-        <div class="w-32 h-32 bg-accent rounded-full flex items-center justify-center mb-4 shadow-md border-4 border-white">
-          <span class="text-primary text-2xl font-bold">Logo</span>
+        <div class="w-32 h-32 bg-accent rounded-full flex items-center justify-center mb-4 shadow-md border-4 border-white overflow-hidden">
+          <img src="SNKB%20LOGO.jpg" alt="Logo Stowarzyszenia Nasze Kliny Borkowskie" class="object-contain w-full h-full" />
         </div>
         <h1 class="text-3xl md:text-4xl font-extrabold tracking-tight drop-shadow-lg">Stowarzyszenie "Nasze Kliny Borkowskie"</h1>
       </div>
