--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           Kontakt
         </h2>
         <div class="bg-light rounded-lg p-6 shadow flex flex-col gap-2">
-          <div class="flex flex-col md:flex-row md:gap-8">
+          <div class="flex flex-col md:flex-row md:gap-4">
             <div class="flex-1">
               <p class="mb-1"><span class="font-semibold">KRS:</span> 0001172695</p>
               <p class="mb-1"><span class="font-semibold">NIP:</span> 6793331202</p>
@@ -77,7 +77,7 @@
             </div>
             <div class="flex-1">
               <p class="mb-1"><span class="font-semibold">Email:</span> <a href="mailto:biuro@naszeklinyborkowskie.pl" class="text-primary underline hover:text-green-700">biuro@naszeklinyborkowskie.pl</a></p>
-              <p class="mb-1"><span class="font-semibold">Numer konta bankowego:</span><br><span class="font-mono text-base">87 1140 2004 0000 3502 8585 3769</span></p>
+              <p class="mb-1 whitespace-nowrap"><span class="font-semibold">Numer konta bankowego:</span> <span class="font-mono text-base align-middle">87 1140 2004 0000 3502 8585 3769</span></p>
             </div>
           </div>
         </div>
