--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
     <header class="bg-primary text-white py-10 px-4 text-center shadow-lg relative">
       <div class="flex flex-col items-center justify-center">
-        <div class="w-32 h-32 bg-accent rounded-full flex items-center justify-center mb-4 shadow-md border-4 border-white overflow-hidden">
-          <img src="SNKB LOGO.png" alt="Logo Stowarzyszenia Nasze Kliny Borkowskie" class="object-contain w-full h-full" />
+        <div class="w-32 h-32 bg-accent rounded-full flex items-center justify-center mb-4 shadow-md border-4 border-white">
+          <span class="text-primary text-2xl font-bold">Logo</span>
         </div>
         <h1 class="text-3xl md:text-4xl font-extrabold tracking-tight drop-shadow-lg">Stowarzyszenie "Nasze Kliny Borkowskie"</h1>
       </div>
@@ -77,7 +77,7 @@
             </div>
             <div class="flex-1">
               <p class="mb-1"><span class="font-semibold">Email:</span> <a href="mailto:biuro@naszeklinyborkowskie.pl" class="text-primary underline hover:text-green-700">biuro@naszeklinyborkowskie.pl</a></p>
-              <p class="mb-1 whitespace-nowrap"><span class="font-semibold">Numer konta bankowego:</span> <span class="font-mono text-base align-middle">87 1140 2004 0000 3502 8585 3769</span></p>
+              <p class="mb-1"><span class="font-semibold">Numer konta bankowego:</span><br><span class="font-mono text-base">87 1140 2004 0000 3502 8585 3769</span></p>
             </div>
           </div>
         </div>
